# examina

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deployment/: README.md  examina.service  nginx.conf
deployment/caddy/: Caddyfile
docs/: ALPHA_SUCCESS.md  BETA_GUIDE.md  GITHUB_SETUP.md  INTEGRATION_TEST_RESULTS.md  LOAD_TEST_RESULTS.md  PROJECT_STATUS.md  SECURITY_NOTES.md
docs/adr/: ADR-0000-template.md  ADR-0001-bridge-type-schema-amendment.md  ADR-0002-mime-detection-signature-table.md
requirements/: dev.txt  frozen_v060.txt
scripts/: export_alpha_snapshot.py  load_test.py
specs/: BRIDGE_SPEC_v1.0.md  BRIDGE_SPEC_v1.1.md  CONFIDENCE_TRANSLATION_v1.0.md  CONSTITUTION_v1.0.md  DECISION_MODEL_v1.0.md  DEPLOYMENT_SPEC_v1.0.md  EVIDENCE_CLUSTERING_v1.0.md  EVIDENCE_TRACEABILITY_v1.0.md  FAILURE_SPEC_v1.0.md  LANGUAGE_SPEC_v1.0.md  PRD_v1.0.md  REPORT_SCHEMA_v1.0.md  SPEC_VERSION.md  TECH_DEBT.md
src/examina/: __init__.py
tests/: conftest.py
tests/integration/: test_analysis_pipeline.py  test_api.py  test_pipeline_stress.py  test_real_bridge.py
tests/security/: test_upload_security.py
tests/unit/: test_api_auth.py  test_api_database.py  test_api_main.py  test_api_models.py  test_archive_check.py  test_assembler.py  test_bridge_client.py  test_bridge_types.py  test_bridge_validator.py  test_clamav_scan.py  test_clustering.py  test_confidence.py  test_decision.py  test_filename_sanitize.py  test_hash_file.py  test_history.py  test_language_guard.py  test_mime_check.py  test_orchestrator.py  (+7 more)
(+61 files in other folders)
