[project]
name = "examina"
version = "0.0.0"
description = "EXAMINA — Digital Evidence Intelligence for Journalists"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
examina = "examina.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
