[project]
name = "examina"
version = "0.8.0"
description = "EXAMINA — Digital Evidence Intelligence for Journalists"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.139",
    "uvicorn[standard]>=0.51",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0",
    "psutil>=7.2",
    "python-multipart>=0.0.32",
]

[project.scripts]
examina = "examina.cli:app"
examina-api = "examina.api.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
